--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
             android:label="@string/catalog" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,6 +31,14 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="app.com.example.isuhar.jbmrus.MainActivity" />
+        </activity>
+        <activity
+            android:name=".BuyActivity"
+            android:label="@string/title_activity_buy"
+            android:parentActivityName=".CartActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="app.com.example.isuhar.jbmrus.CartActivity" />
         </activity>
     </application>
 
