--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:displayOptions="useLogo|showHome"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:logo="@drawable/ic_action_action_shopping_cart"
+        android:logo="@drawable/ic_action_shopping_cart"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
@@ -39,6 +39,11 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="app.com.example.isuhar.jbmrus.CartActivity" />
+        </activity>
+        <activity
+            android:name=".OffersActivity"
+            android:label="@string/title_activity_offers"
+            android:parentActivityName=".MainActivity">
         </activity>
     </application>
 
