--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.jakewharton:disklrucache:2.0.2'
     compile "com.google.android.gms:play-services:3.1.+"
+    compile 'com.github.rey5137:material:1.1.1'
+    compile('com.mikepenz:materialdrawer:3.0.3@aar') {
+        transitive = true
+    }
 }
